package tasks.task_6;

//strategy
public interface Sorting {
    void sort(int[] arr);

    void findMinMax(int[] arr);
}
