@startuml

title __TASK_6's Class Diagram__\n

  namespace tasks.task_6 {
    class tasks.task_6.BubbleSort {
        + findMinMax()
        + sort()
    }
  }
  

  namespace tasks.task_6 {
    class tasks.task_6.InsertionSort {
        + findMinMax()
        + sort()
    }
  }
  

  namespace tasks.task_6 {
    class tasks.task_6.Main {
        {static} + main()
    }
  }
  

  namespace tasks.task_6 {
    class tasks.task_6.SelectionSort {
        + findMinMax()
        + sort()
    }
  }
  

  namespace tasks.task_6 {
    interface tasks.task_6.Sorting {
        {abstract} + findMinMax()
        {abstract} + sort()
    }
  }
  

  namespace tasks.task_6 {
    class tasks.task_6.StrategyClient {
        + setStrategy()
        + setStrategyOfFindingMinMax()
        ~ executeStrategy()
    }
  }
  

  namespace tasks.task_6 {
    class tasks.task_6.StrategyFindingMinMax {
        + findMinMax()
        + sort()
    }
  }
  

  tasks.task_6.BubbleSort .up.|> tasks.task_6.Sorting
  tasks.task_6.InsertionSort .up.|> tasks.task_6.Sorting
  tasks.task_6.SelectionSort .up.|> tasks.task_6.Sorting
  tasks.task_6.StrategyClient o-- tasks.task_6.Sorting : strategy
  tasks.task_6.StrategyClient o-- tasks.task_6.Sorting : strategyOfFindingMinMax
  tasks.task_6.StrategyFindingMinMax .up.|> tasks.task_6.Sorting


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
